<resources>


    <string name="firth_text">
    Municipal economy</string>
    <string name="second_text" >Create</string>
    <string name="Third_text">
    Registered</string>
    <string name="Fourth_text" >Run to</string>
    <string name="Fiveth_text" >
    Responsible</string>
    <string name="Sixth_text" >In work</string>
    <string name="Seventh_text" >27 january 2016</string>
    <string name="Eightth_text" >27 january 2016</string>
    <string name="Tenth_text">27 january 2016</string>
    <string name="Eleventh_text" >Dnipropetrovsk MVK</string>
    <string name="Longtext">
"Listen, friend, explain to me why every time yours
wife starts to sing, do you go out to the balcony?
"It's just that nobody thinks I'm beating her ..."</string>
    <string name="app_name" translatable="false" />
</resources>
