<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/firth_text"
                android:textColor="@color/black"
                android:textSize="@dimen/defalt_text_size"
                android:layout_margin="10dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                android:text="@string/Sixth_text"
                android:textColor="#fff"
                android:background="#CCFF00"
                android:layout_margin="10dp"
                android:textSize="@dimen/text_size" />


            </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"

            android:text="@string/second_text"
            android:textColor="@color/black"
            android:textSize="@dimen/defalt_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/Seventh_text"
            android:layout_margin="10dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentLeft="true"

            android:text="@string/Third_text"
            android:textColor="@color/black"
            android:textSize="@dimen/defalt_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/Eightth_text"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:text="@string/Fourth_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/Tenth_text"
            android:layout_margin="10dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:text="@string/Fiveth_text"
            android:textColor="@color/black"
            android:textSize="@dimen/defalt_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentRight="true"
            android:text="@string/Eleventh_text"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size" />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:text="@string/Longtext"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
       android:layout_margin="20dp"
        android:src="@drawable/photo_one"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/photo_two"
        />
    </RelativeLayout>
</LinearLayout>



</android.support.constraint.ConstraintLayout>